--- a/PI_EncoderF1.ioc
+++ b/PI_EncoderF1.ioc
@@ -1,40 +1,74 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI2_RX
+Dma.RequestsNb=2
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.Instance=DMA1_Channel2
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.1.Instance=DMA1_Channel4
+Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM4
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM4
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB4
-Mcu.Pin11=PB7
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-Mcu.PinsNb=17
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB7
+Mcu.Pin2=PA1
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB12
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.0.1
 MxDb.Version=DB.5.0.1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -43,10 +77,18 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -55,12 +97,22 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Locked=true
-PA4.Signal=GPIO_Output
-PB13.Locked=true
-PB13.Signal=GPIO_Output
-PB14.Locked=true
-PB14.Signal=GPIO_Output
+PA4.Mode=NSS_Signal_Hard_Input
+PA4.Signal=SPI1_NSS
+PA5.Mode=Full_Duplex_Slave
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Slave
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Slave
+PA7.Signal=SPI1_MOSI
+PB12.Mode=NSS_Signal_Hard_Input
+PB12.Signal=SPI2_NSS
+PB13.Mode=Full_Duplex_Slave
+PB13.Signal=SPI2_SCK
+PB14.Mode=Full_Duplex_Slave
+PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Slave
+PB15.Signal=SPI2_MOSI
 PB3.Locked=true
 PB3.Signal=GPXTI3
 PB4.Locked=true
@@ -112,7 +164,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -140,6 +192,19 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS
+SPI1.Mode=SPI_MODE_SLAVE
+SPI1.VirtualNSS=VM_NSSHARD
+SPI1.VirtualType=VM_SLAVE
+SPI2.CalculateBaudRate=16.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_SLAVE
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=999
 TIM2.Prescaler=6399
