--- a/PI_EncoderF1.ioc
+++ b/PI_EncoderF1.ioc
@@ -1,7 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=SPI1_RX
-Dma.Request1=SPI2_RX
-Dma.RequestsNb=2
+Dma.RequestsNb=1
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.Instance=DMA1_Channel2
 Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -11,15 +10,6 @@ Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.1.Instance=DMA1_Channel4
-Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
@@ -27,9 +17,9 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
 Mcu.IP7=TIM4
 Mcu.IP8=USART2
 Mcu.IPNb=9
@@ -39,28 +29,26 @@ Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB13
 Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB7
-Mcu.Pin2=PA1
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB12
-Mcu.PinsNb=25
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB7
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -68,7 +56,6 @@ MxCube.Version=5.0.1
 MxDb.Version=DB.5.0.1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -78,17 +65,13 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA11.Locked=true
-PA11.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -105,14 +88,10 @@ PA6.Mode=Full_Duplex_Slave
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Slave
 PA7.Signal=SPI1_MOSI
-PB12.Mode=NSS_Signal_Hard_Input
-PB12.Signal=SPI2_NSS
-PB13.Mode=Full_Duplex_Slave
-PB13.Signal=SPI2_SCK
-PB14.Mode=Full_Duplex_Slave
-PB14.Signal=SPI2_MISO
-PB15.Mode=Full_Duplex_Slave
-PB15.Signal=SPI2_MOSI
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=GPXTI3
 PB4.Locked=true
@@ -129,6 +108,8 @@ PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -164,7 +145,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -199,15 +180,12 @@ SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
-SPI2.CalculateBaudRate=16.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
-SPI2.Mode=SPI_MODE_SLAVE
-SPI2.VirtualNSS=VM_NSSHARD
-SPI2.VirtualType=VM_SLAVE
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=999
 TIM2.Prescaler=6399
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=999
+TIM3.Prescaler=6399
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period
@@ -219,6 +197,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
